src/scss/main.scss
@import '../../node_modules/bootstrap/scss/bootstrap';

@import 'variables';
@import 'utilities';

.foo {
  @include absolute(0, 0, auto, auto);
}

body {
  padding-top: 5rem;
}

.generic-container {
  padding: 3rem 1.5rem;
  margin: 0 auto;
}

.add-bike-form {
  max-width: 410px;
}

.form-check-label {
  padding-left: 1.25rem;
  cursor: pointer;
}

input[type="radio"] {
  margin: 0 1em;
  font-size: 1.4rem;
}

.form-control-number {
  width: 70px;
}

label {
  font-weight: normal;
}

legend {
  font-size: 1.6rem;
}

input[type="file"].form-control-file {
  display: none;
}

.custom-file-upload {
  cursor: pointer;
}

.add-bike-photo {
  opacity: 0.25;
}

dl.bike-details dt {
  float: left;
  padding-right: 1rem;
}

.card-title {
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.card-photo-wrapper {
  width: 100%;
  background-color: gray;
  overflow: hidden;
  height: 250px;
}

@media (min-width: 992px) and (max-width: 1200px) {
  .card-photo-wrapper {
    height: 200px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .card-photo-wrapper {
    height: 145px;
  }
  .card-title {
    font-size: 1.1rem;
  }
}

@media (min-width: 543px) and (max-width: 767px) {
  .card-photo-wrapper {
    height: 350px;
  }
}

@media (min-width: 500px) and (max-width: 543px) {
  .card-photo-wrapper {
    height: 315px;
  }
}

@media (min-width: 465px) and (max-width: 499px) {
  .card-photo-wrapper {
    height: 290px;
  }
}

@media (min-width: 430px) and (max-width: 465px) {
  .card-photo-wrapper {
    height: 250px;
  }
}


@media (min-width: 390px) and (max-width: 429px) {
  .card-photo-wrapper {
    height: 235px;
  }
}

@media (max-width: 389px) {
  .card-photo-wrapper {
    height: 200px;
  }
}


.card-photo {
    width: 100%;
}

